--- a/css/colour.css
+++ b/css/colour.css
@@ -114,8 +114,8 @@ input[readonly] {color: #000000;}
 /* End Home */
 
 .CollectImageBorder {border: 1px solid #000000;}	
-.ASC	{	background: url(../gfx/interface/ASC.gif) no-repeat;background-position:center;}
-.DESC	{	background: url(../gfx/interface/DESC.gif) no-repeat;background-position:center;}
+.ASC::before	{content: " \25BC";font-size:80%;}
+.DESC::before	{content: " \25B2";font-size:80%;}
 .IconUserRatingStar	{	background: url(../gfx/interface/RatingStarRed.gif) no-repeat;}
 .IconUserRatingSpace	{	background: url(../gfx/interface/RatingStarBlank.gif) no-repeat;}
 .StarSelect {background: transparent url(../gfx/interface/RatingStarRed.gif) no-repeat;}
@@ -123,7 +123,8 @@ input[readonly] {color: #000000;}
 .StarCurrent {background: transparent url('../gfx/interface/RatingStarGrey.gif') no-repeat;}
 
 .NavUnderline,.Question,.QuestionSubmit {border-bottom: 1px solid #ddd;}
-.ListviewStyle thead,.ListviewTitleStyle{background:#DDD;}
+.ListviewStyle thead,.ListviewTitleStyle{background:#555;color: white;}
+.ListviewTitleStyle a,.ListviewTitleStyle a:visited,.ListviewTitleStyle a:hover {color: white;}
 .Question, .QuestionSubmit {background: #fff;}
 
 /* Put rounded corners on the first and last Question/QuestionSubmit in each block only */
@@ -176,6 +177,7 @@ div.autocomplete ul li {color: #000;}
 .StarGrey {background: transparent url('../gfx/interface/RatingStarGrey.gif') no-repeat;}
 .RatingStars a:hover {text-decoration:none;}
 .Listview .ListViewSubTable,.Listview .ListViewSubTable td,.Listview .ListViewSubTable tr {background-image: none;}
+.Listview {background-color: white;border-radius:5px;}
 .StarEmpty {  background: transparent url('../gfx/interface/RatingStarGrey.gif') no-repeat;}
 .StarCurrent { background: transparent url('../gfx/interface/RatingStarWhite.gif') no-repeat;}
 .highlight {color: #000;background-color: #ff0;}
@@ -206,8 +208,8 @@ div.autocomplete ul li {color: #000;}
 .NewFlag {background-color:#737373;color:#fff;}
 /* Mouseover effect on list views */
 .ListviewStyle tr:hover td {background-color: #EEE;} 
-.ListviewStyle tr.ListviewTitleStyle:hover td {background:none;background-color:#F3F3F3;} 
-.ListviewStyle tr.ListviewBoxedTitleStyle:hover td {background:none;background-color:#fff;} 
+.ListviewStyle tr.ListviewTitleStyle:hover td {background:none;background-color:#555;} 
+.ListviewStyle tr.ListviewBoxedTitleStyle:hover td {background:none;background-color:#555;} 
 /* single file upload progress bar */
 .meter-value {background-color: #BBBBBB;}
 .meter-wrap{border:1px solid #BBBBBB;}
