CHG: Removed inline styles from analytics page and made them part of the main sheets. Changed the report background to white.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10363 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -394,3 +394,10 @@ input:checked + .customFieldLabel, .keywordselected
 	background-color:white;
     color:black;
 	}
+
+.ReportSheet {background-color:#fff;border:1px solid black;color:black;}
+.ReportSheet  h2 {color:black;}
+.ReportSheet  p {color:black;}
+.ReportSummary {background-color:white;color:black;border-collapse:collapse;}
+.ReportSummary td {border:1px solid #888;color:black;}
+.ReportMetric {color:black;}
