FIX: Ensure text stays within Notes field, metadata tables to display more uniformly, preview image size improvement. [t14353]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10396 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -122,11 +122,17 @@
     .BasicsBox .Question {
         overflow-x:auto;
     }
+    .customFieldset table {
+        white-space: nowrap;
+    }
 
 }
 @media(max-width:700px) {
     .FormHelp {
         margin:0 0 10px 0px;
+    }
+    .Question {
+        overflow: scroll;
     }
 }
 @media(max-width:525px) {
