--- a/css/global.css
+++ b/css/global.css
@@ -402,7 +402,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 .RecordPanel .RecordDownloadSpace .DownloadDBlend .DownloadButton {text-align: center;font-weight: bold;}
 .RecordPanel .RecordDownloadSpace .DownloadDBlend h2 {margin:0;padding:0;font-size: 1em;	text-align: left;}
 .RecordPanel .RecordDownloadSpace .DownloadDBlend p {margin:0;padding:0;	text-align: left;}
-.RecordStory{padding: 6px;}
+.RecordStory {padding: 6px; word-break: break-all;}
 .RecordStory h1{font-size:1.25em; padding:0.5em 0 0.5em 0; margin:0;font-weight:bold;}
 
 .RecordPanel h2{font-size:1.25em; padding:0; margin:0.5em 0 0.5em 0;font-weight:bold;}
