FIX: Adding responsive stylesheets to login screen and other minor CSS adjustments [t14345]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10406 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -158,6 +158,8 @@
         margin-left:3%;
         margin-right:3%;
         padding:0;
+        top:0;
+        transform:translateY(0); 
     }
 }
 /* Glyphs */
