--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -349,6 +349,10 @@
         display:inline-block;
         margin:0;
     }
+    #SearchBoxPanel .ui-widget {
+        width: 250px;
+        margin-top: 10px;
+    }
     #searchspace {
         padding:0;
     }
