FIX: Correctly align anti-spam sign up image when viewing on mobile device [t14723].
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10456 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -161,6 +161,9 @@
         top:0;
         transform:translateY(0); 
     }
+    #AntiSpamImage {
+        margin-left: 0 !important;
+    }
 }
 /* Glyphs */
 .glyph {
