FIX: Re-enable resource type icons for standard thumbs view. [t14725]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10466 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -252,7 +252,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 .ResourcePanelCountry {margin-right: 5px;margin-left: 5px;margin-bottom: 0px;float: left;clear: left;display:inline;}	
 .ResourcePanelIcons {padding: 5px;text-align:right;position:absolute;bottom:0;right:0;width:142px;}	
 .ResourcePanelSmallIcons {padding-left: 5px;}	
-.ImageWrapper {height:150px;display:block;padding:0;;vertical-align: middle;text-align: center;}
+.ImageWrapper {height:150px;display:block;padding:0;;vertical-align: middle;text-align: center;clear: right;}
 
 .ResourceAlign {width:172px;height:177px;text-align: center;vertical-align: middle;}
 .ResourceTypeIcon { height: 16px;width:16px;float:right;margin-right:5px;margin-top:6px; }
