--- a/css/colour.css
+++ b/css/colour.css
@@ -5,12 +5,12 @@
  * Standard structural styling should be placed inside global.css
  * 
  */
-body,html {color:#555;background: #e6e6e6;}
+body,html {color:#474747;background: #ebebeb;}
 h2 {color: #000000;}
 h1 {color: #000000;}
 
-a:link {color:#737373;}
-a:visited {color:#737373;}
+a:link {color:#666666;}
+a:visited {color:#666666;}
 a:hover {color:#000000;}
 a:active {opacity:0.6;}
 input[readonly] {color: #000000;}
@@ -47,9 +47,9 @@ input[type=submit] {border-radius: 5px;}
 .ListTitle a:link, 
 .ListTitle a:visited, 
 .ListTitle a:active 
-	{color:#737373;}
+	{color:#666666;}
 .HorizontalWhiteNav a:hover, .BasicsBox .VerticalNav a:hover, .ListTitle a:hover {color:#000000;}
-.HorizontalWhiteNav li, .HorizontalNav li {border-left:1px solid #737373;}
+.HorizontalWhiteNav li, .HorizontalNav li {border-left:1px solid #666666;}
 /* Search Bar */
 #SearchBoxPanel a:link, #SearchBoxPanel a:visited, #SearchBoxPanel a:hover,
 #ResearchBoxPanel a:link, #ResearchBoxPanel a:visited, #ResearchBoxPanel a:hover, #ResearchBoxPanel a:active
