NEW: Merge montala_featured_collections_overhaul into trunk [q9508]. Includes: - Styling changes - New config option to enable a background image for the Featured Collection pages - Category link standardisation for featured collections and categories (featured collection tile hover links) - New Featured Collection dash tile - Ability to create a new collection / category directly from Featured Collections - New actions dropdown - Add to Featured Collections category - New double width dash tile
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10508 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -401,3 +401,6 @@ input:checked + .customFieldLabel, .keywordselected
 .ReportSummary {background-color:white;color:black;border-collapse:collapse;}
 .ReportSummary td {border:1px solid #888;color:black;}
 .ReportMetric {color:black;}
+
+.BreadcrumbsBox { color:#FFF; }
+.BreadcrumbsBox a, .BreadcrumbsBox a:link, .BreadcrumbsBox a:visited { color: #FFF; }
