CHG: Added boxes around collection items to match the search result view.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10518 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -98,6 +98,8 @@ input[type=submit] {border-radius: 5px;}
 .CollectionPanelInfo .IconComment {background: url(../gfx/interface/IcComment.gif) no-repeat;}
 .CollectionPanelInfo .IconCommentAnim {background: url(../gfx/interface/IcComment_anim.gif) no-repeat;}
 .CollectionPanelInfo .IconRemove {background: url(../gfx/interface/IcRemove.gif) no-repeat;}
+.CollectionPanelShell {background-color: #444;}
+
 /* Home */
 .HomePanel a:link, 
 .HomePanel a:visited, 
