--- a/css/global.css
+++ b/css/global.css
@@ -204,7 +204,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 #CentralSpace .SplitSearch {float: left; margin-left: 5px;margin-right: 5px;}
 .NumberSearchWidth {font-size: 0.9em;width:80px;font-size: 0.9em;margin: 0px 0px;padding: 0px;margin-bottom:3px;}
 
-.CollectionPanelShell {padding:0;float: left;margin: 0px 15px 5px 0px;width: 97px;height: 120px; text-align: left;}
+.CollectionPanelShell {padding:5px;float: left;margin: 0px 15px 5px 0px;width: 97px;height: 120px; text-align: left;border-radius: 5px;}
 .CollectionPanelInfo{padding-bottom:3px;}
 .CollectionResourceAlign {width:97px;height:85px;text-align: center;vertical-align: middle;}
 
