FIX: Another tweak to CSS to prevent modal from affecting view page
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10579 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1015,9 +1015,9 @@ div.video-js {margin:auto;}
 #modal .BasicsBox .HelpHeader a { color: #e0e0e0; }
 #modal .BasicsBox .HelpHeader .backtoresults { margin-top: 15px; }
 
-#modal form {
+.modalform {
     min-width: 600px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     }
 /* Dropdown Actions */
 #CollectionMenu .ActionsContainer {
