FIX: Improve styling of user group selection for dash tiles [t14929]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10619 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -128,6 +128,9 @@
     .customFieldset table {
         white-space: nowrap;
     }
+    #specific_user_groups {
+        padding-left: 0 !important;
+    }
 
 }
 @media(max-width:700px) {
