FIX: SVG header logo not scaling correctly in IE. To work reliably however SVG files need to include ViewBox and preserveAspectRatio properties [t14986]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10650 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -128,14 +128,28 @@ h2#CollectionsPanelHeader {display:none;}
 .HeaderLarge #HeaderNav1 {height:70px;}
 .HeaderLarge #HeaderNav2 {float:right; clear:both; padding-left: 20px;margin-top:0;}
 
-/* Fix for IE not scaling svg files correctly */
-@media all and (-ms-high-contrast: active), (-ms-high-contrast: none)
+.HeaderImgLink
     {
-    img[src$=".svg"]
-        {
-        height: 100% !important; 
-        width: 100% !important;
-        }
+    width: auto;
+    }
+    
+/* Parent height set so that svg files scale correctly */
+.HeaderSmall .HeaderImgLink
+    {
+    height: 40px;
+    }
+.HeaderMid .HeaderImgLink
+    {
+    height: 50px;
+    }		
+.HeaderLarge .HeaderImgLink
+    {
+    height: 70px;
+    }
+
+img[src$=".svg"]
+    {
+    height: 100% !important; 
     }
 
 /* Slim header with fixed top bar */
