FIX: Improve layout of results options in responsive mode [t14948]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10662 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -720,16 +720,16 @@ margin-bottom: 10px;
 width: 90px;
 }
 
-.smalllisticon{background: url(../gfx/interface/listicon.png) no-repeat 0px;}
-.smalllisticonactive {background: url(../gfx/interface/listiconactive.png) no-repeat 0px;}
-.xlthumbsicon{background: url(../gfx/interface/xlicon.png) no-repeat 0px;}
-.xlthumbsiconactive {background: url(../gfx/interface/xliconactive.png) no-repeat 0px;}
-.smallthumbsiconactive{background: url(../gfx/interface/smalliconactive.png) no-repeat 0px;}
-.smallthumbsicon{background: url(../gfx/interface/smallicon.png) no-repeat 0px;}
-.largethumbsicon{background: url(../gfx/interface/largeicon.png) no-repeat 0px;}
-.largethumbsiconactive{background: url(../gfx/interface/largeiconactive.png) no-repeat 0px;}
-.stripiconactive{background: url(../gfx/interface/stripiconactive.png) no-repeat 0px;}
-.stripicon{background: url(../gfx/interface/stripicon.png) no-repeat 0px;}
+.smalllisticon{background: url(../gfx/interface/listicon.svg) no-repeat 0px;}
+.smalllisticonactive {background: url(../gfx/interface/listiconactive.svg) no-repeat 0px;}
+.xlthumbsicon{background: url(../gfx/interface/xlicon.svg) no-repeat 0px;}
+.xlthumbsiconactive {background: url(../gfx/interface/xliconactive.svg) no-repeat 0px;}
+.smallthumbsiconactive{background: url(../gfx/interface/smalliconactive.svg) no-repeat 0px;}
+.smallthumbsicon{background: url(../gfx/interface/smallicon.svg) no-repeat 0px;}
+.largethumbsicon{background: url(../gfx/interface/largeicon.svg) no-repeat 0px;}
+.largethumbsiconactive{background: url(../gfx/interface/largeiconactive.svg) no-repeat 0px;}
+.stripiconactive{background: url(../gfx/interface/stripiconactive.svg) no-repeat 0px;}
+.stripicon{background: url(../gfx/interface/stripicon.svg) no-repeat 0px;}
 
 #contactadminbox  textarea{
 	width:100%;
