--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -1040,3 +1040,10 @@
     }
 }
 
+/* VideoJS */
+@media (max-width:600px) {
+    .video-js {
+        width: 80vw;
+        height: 80vw;
+    }
+}
