--- a/css/global.css
+++ b/css/global.css
@@ -20,6 +20,8 @@
 h1,h2,h3,h4,h5,h6,.Title {font-family:WorkSansMedium, Tahoma, Arial, Helvetica, sans-serif;}
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button,.ui-widget, body, input, textarea, select {font-family:WorkSans, Tahoma, Arial, Helvetica, sans-serif;}
 
+select {font-size:1em;}
+.TopInpageNav select {padding:3px;}
 
 /*Create Base font for relative sizing*/
 html {height:100%;}
@@ -56,7 +58,7 @@ input[readonly] {border: none; background: none;}
 input,textarea {box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;}
 option {font-size:1em;}
 input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
-button[type="submit"] { font-size: 1em; }
+input[type=submit], input[type=button] {border-radius: 5px; font-size: 1em;}
 #clearbutton {margin: 10px 5px 0 0;width: 122px;}
 #searchbutton{ width: 122px;margin: 10px 0 0 0;}
 /*General tags*/
@@ -119,7 +121,7 @@ h2#CollectionsPanelHeader {display:none;}
 .HeaderSmall #HeaderImg{max-height:40px;}
 .HeaderSmall #HeaderNav1 {height:30px;}
 
-.HeaderMid #HeaderNav1, .HeaderMid #HeaderNav2 {margin:5px 0 0 0;line-height: 35px;}
+.HeaderMid #HeaderNav1, .HeaderMid #HeaderNav2 {margin:9px 0 0 0;line-height: 35px;}
 .HeaderMid #HeaderImg{max-height:50px;}
 .HeaderMid #HeaderNav1 {height:50px;}
 
@@ -170,7 +172,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 #CentralSpaceLogin {margin: 2em auto 4em;padding:0;width: 760px;text-align:left;}
 #CentralSpace {text-align:left;position:relative;}
 
-.TopInpageNav {clear: left;padding-bottom: 5px;margin-bottom:10px;margin-right: 0;position:relative;}
+.TopInpageNav {clear: left;margin-bottom:10px;margin-right: 0;position:relative;}
 .BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 20px 0px; position:relative;}
 .BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
 .TopInpageNavLeft{float:left;padding-right:240px;}
@@ -218,7 +220,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 #CentralSpace .SplitSearch {float: left; margin-left: 5px;margin-right: 5px;}
 .NumberSearchWidth {font-size: 0.9em;width:80px;font-size: 0.9em;margin: 0px 0px;padding: 0px;margin-bottom:3px;}
 
-.CollectionPanelShell {padding:5px;float: left;margin: 0px 15px 5px 0px;width: 97px;height: 120px; text-align: left;border-radius: 5px;}
+.CollectionPanelShell {padding:5px;float: left;margin: 0px 10px 10px 0px;width: 97px;height: 120px; text-align: left;border-radius: 5px;}
 .CollectionPanelInfo{padding-bottom:3px;}
 .CollectionResourceAlign {width:97px;height:85px;text-align: center;vertical-align: middle;}
 
@@ -425,7 +427,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 
 
 /* Basic page */
-.BasicsBox {margin:20px 15px 15px 0px;}
+.BasicsBox {margin:20px 15px 10px 0px;}
 .BasicsBox h1 {padding: 0px 0px 0.5em;}
 .BasicsBox h2 {font-size: 1.2em;margin-bottom: 4px;}
 .BasicsBox .HorizontalNav ul {padding:0.2em 0;margin:0 0 1.5em;list-style:none;}
