NEW: Option to 'lock' metadata fields in upload_then_edit mode to use for subsequent resources [q9846]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10806 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1384,3 +1384,12 @@ a.Enabled, a:visited.Enabled {
 #tile_style_colour {
     display: none;
 }
+
+.lockedQuestion .fieldset, .lockedQuestion table, .lockedQuestion input, .lockedQuestion select, .lockedQuestion textarea{
+   opacity: 0.6;
+}
+
+.lock_icon {
+    float: right;
+    height: 30px;
+}
