FIX: Amendments to upload_review_lock_metadata functionality in r10806 [q9846]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10821 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1385,8 +1385,8 @@ a.Enabled, a:visited.Enabled {
     display: none;
 }
 
-.lockedQuestion .fieldset, .lockedQuestion table, .lockedQuestion input, .lockedQuestion select, .lockedQuestion textarea{
-   opacity: 0.6;
+.lockedQuestion .fieldset, .lockedQuestion table, .lockedQuestion input, .lockedQuestion select, .lockedQuestion textarea, .lockedQuestion .keywordselected, .lockedQuestion .CategoryBox{
+   font-weight: bold;
 }
 
 .lock_icon {
